--- a/webapp/src/ionicapp/www/templates/sensorDashboard.html
+++ b/webapp/src/ionicapp/www/templates/sensorDashboard.html
@@ -59,8 +59,8 @@
     </div>
     <div class="list card widget_whole" id="sensorDashboard-card217" ng-show="sensors.length > 0">
       <div class="item item-body" id="sensorDashboard-list-item-container32" ng-click="changeDeviceTableHide()">
-        <div id="sensorDashboard-markdown463" style="text-align:center;" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:16px;">
+        <div id="sensorDashboard-markdown463" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#888888;font-size:16px;">
             <strong> Devices Summary </strong>
           </p>
         </div>
@@ -144,8 +144,8 @@
     </div>
     <div class="list card widget_whole" id="sensorDashboard-card220" ng-show="sensors.length > 0">
       <div class="item item-body" id="sensorDashboard-list-item-container43" ng-click="changeSensorTableHide()">
-        <div id="sensorDashboard-markdown462" style="text-align:center;" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:16px;">
+        <div id="sensorDashboard-markdown462" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#888888;font-size:16px;">
             <strong> Sensors Summary </strong>
           </p>
         </div>
@@ -235,10 +235,10 @@
         </table>
       </div>
     </div>
-    <div class="list card widget_whole" id="sensorDashboard-card211" ng-show="sensors.length > 0">
+    <div class="list card widget_whole" id="sensorDashboard-card211" ng-show="false">
       <div class="item item-body" id="sensorDashboard-list-item-container34" ng-click="changeUsageTableHide()">
-        <div id="sensorDashboard-markdown469" style="text-align:center;" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:16px;">
+        <div id="sensorDashboard-markdown469" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#888888;font-size:16px;">
             <strong> Usage Summary </strong>
           </p>
         </div>
@@ -248,21 +248,24 @@
 
           <div class="row">
 
+
             <div class="column" style="width:25%;">
-              <canvas id="bar1" class="chart chart-horizontal-bar" chart-data="usages.alerts.data" chart-labels="usages.alerts.labels" chart-colors="sensors_datachart_colors_options_ex2" chart-options="sensors_datachart_barchart_usages_alerts_options">
+              <canvas id="bar1" class="chart chart-horizontal-bar" chart-data="usages.login.data" chart-labels="usages.login.labels" chart-colors="sensors_datachart_colors_options_ex2" chart-options="sensors_datachart_barchart_usages_login_options" chart-series="sensors_datachart_barchart_usages_login_series">
               </canvas>
             </div>
 
 
             <div class="column" style="width:25%;">
-              <canvas id="bar2" class="chart chart-horizontal-bar" chart-data="usages.storage.data" chart-labels="usages.storage.labels" chart-colors="sensors_datachart_colors_options_ex2" chart-options="sensors_datachart_barchart_usages_storage_options">
+              <canvas id="bar2" class="chart chart-horizontal-bar" chart-data="usages.alerts.data" chart-labels="usages.alerts.labels" chart-colors="sensors_datachart_colors_options_ex2" chart-options="sensors_datachart_barchart_usages_alerts_options" chart-series="sensors_datachart_barchart_usages_alerts_series">
               </canvas>
             </div>
 
+
             <div class="column" style="width:25%;">
-              <canvas id="bar3" class="chart chart-horizontal-bar" chart-data="usages.login.data" chart-labels="usages.login.labels" chart-colors="sensors_datachart_colors_options_ex2" chart-options="sensors_datachart_barchart_usages_login_options">
+              <canvas id="bar3" class="chart chart-horizontal-bar" chart-data="usages.storage.data" chart-labels="usages.storage.labels" chart-colors="sensors_datachart_colors_options_ex2" chart-options="sensors_datachart_barchart_usages_storage_options" chart-series="sensors_datachart_barchart_usages_storage_series">
               </canvas>
             </div>
+
 
           </div>
 
@@ -324,7 +327,7 @@
     <div class="list card widget_quarter" id="sensorDashboard-card28" ng-repeat="sensor in sensors" ng-show="!big_charts">
       <div class="item item-body" id="sensorDashboard-list-item-container19" ng-click="changeSensorHide(sensor)">
         <div id="sensorDashboard-markdown295" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:16px;">
+          <p style="margin-top:0px;color:#888888;font-size:16px;">
             <strong>{{ sensor.devicename + " - " + sensor.sensorname }}</strong>
           </p>
         </div>
@@ -332,7 +335,7 @@
           <p style="margin-top:0px;color:#3C5A99;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
         </div>
         <div id="sensorDashboard-markdown459" style="text-align:right;" class="show-list-numbers-and-dots widget_button_half">
-          <p style="margin-top:0px;color:#444444;font-size:16px;">
+          <p style="margin-top:0px;color:#888888;font-size:16px;">
             <strong> {{ sensor.subclass ? sensor.readings.value + " " + sensor.units[0] + " | " + sensor.readings.subclass.value + " " + sensor.units[1] : sensor.readings.value + " " + sensor.units[0] }} </strong>
           </p>
         </div>
@@ -363,7 +366,7 @@
     <div class="list card widget_whole" id="sensorDashboard-card25" ng-repeat="sensor in sensors" ng-show="big_charts">
       <div class="item item-body" id="sensorDashboard-list-item-container22" ng-click="changeSensorHide(sensor)">
         <div id="sensorDashboard-markdown435" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:18px;">
+          <p style="margin-top:0px;color:#888888;font-size:18px;">
             <strong>{{ sensor.devicename + " - " + sensor.sensorname }}</strong>
           </p>
         </div>
@@ -371,7 +374,7 @@
           <p style="margin-top:0px;color:#3C5A99;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
         </div>
         <div id="sensorDashboard-markdown438" style="text-align:right;" class="show-list-numbers-and-dots widget_button_half">
-          <p style="margin-top:0px;color:#444444;font-size:28px;">
+          <p style="margin-top:0px;color:#888888;font-size:28px;">
             <strong> {{ sensor.subclass ? sensor.readings.value + " " + sensor.units[0] + " | " + sensor.readings.subclass.value + " " + sensor.units[1] : sensor.readings.value + " " + sensor.units[0] }} </strong>
           </p>
         </div>
@@ -402,7 +405,7 @@
     <div class="list card widget_quarter" id="sensorDashboard-card218" ng-repeat="comparison in comparisons" ng-show="false">
       <div class="item item-body" id="sensorDashboard-list-item-container42" ng-click="changeSensorComparisonsHide(comparison)">
         <div id="sensorDashboard-markdown252" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:16px;">
+          <p style="margin-top:0px;color:#888888;font-size:16px;">
             <strong>{{ comparison.class.toUpperCase() }}</strong>
           </p>
         </div>
