Implement UI for Organization feature

--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -205,6 +205,11 @@ table, th, td {
 	margin: 0% auto;
 }
 
+.page_width_medium {
+	max-width: 700px;
+	margin: 0% auto;
+}
+
 .widget_selection_half {
 	width: 49% !important;
 	min-width: 300px;
@@ -326,6 +331,11 @@ table, th, td {
 
 .widget_button_third {
 	width: 33% !important;
+	display: inline-block;
+}
+
+.widget_button_quarter {
+	width: 24.5% !important;
 	display: inline-block;
 }
 
