--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -22,6 +22,9 @@
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.credits({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-ios-cog"></i>Credits</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item9" ui-sref="menu.organizations({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-ios-color-filter-outline"></i>Organizations</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item1" ui-sref="menu.devices({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-ios-keypad"></i>Devices</ion-item>
