--- a/webapp/src/ionicapp/www/templates/profile.html
+++ b/webapp/src/ionicapp/www/templates/profile.html
@@ -1,10 +1,9 @@
-<ion-view title="Profile" hide-back-button="true" nav-transition="none" id="page3" class="page_width">
+<ion-view title="Profile" hide-back-button="true" nav-transition="none" id="page3" class="page_width_small">
   <ion-nav-buttons side="right" class="has-header">
     <button class="button button-positive icon ion-refresh" ng-click="getProfile()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="height: 20px;"></div>
-    <div id="profile-button-bar2" class="button-bar"></div>
     <button id="profile-button132" ng-click="submitChangepassword()" style="font-weight:600;font-size:18px;text-align:left;" class="button button-positive button-block button-clear icon-right ion-android-settings">{{ data.fullname }}</button>
     <form id="profile-form16" class="list">
       <ion-item class="item-divider" id="profile-list-item-divider9"> Email</ion-item>
