--- a/webapp/src/ionicapp/www/templates/alerts.html
+++ b/webapp/src/ionicapp/www/templates/alerts.html
@@ -9,24 +9,24 @@
         <p style="color:#3C5A99;">Filter options</p>
       </div>
       <div class="spacer" style="width: 300px; height: 5px;"></div>
-      <label class="item item-select widget_button_third" id="alerts-select102">
+      <label class="item item-select widget_button_third_ex" id="alerts-select102">
         <span class="input-label">Device</span>
         <select ng-options="devices.indexOf(deviceidx) as deviceidx for deviceidx in devices" ng-model="deviceidx"></select>
       </label>
-      <label class="item item-select widget_button_third" id="alerts-select103">
+      <label class="item item-select widget_button_third_ex" id="alerts-select103">
         <span class="input-label">Peripherals</span>
         <select ng-options="peripheral for peripheral in peripherals" ng-model="peripheral"></select>
       </label>
-      <label class="item item-select widget_button_third" id="alerts-select104">
+      <label class="item item-select widget_button_third_ex" id="alerts-select104">
         <span class="input-label">Types</span>
         <select ng-options="type for type in types" ng-model="type"></select>
       </label>
       <div class="spacer" style="width: 300px; height: 5px;"></div>
-      <label class="item item-input item-stacked-label widget_button_half" id="alerts-input160">
+      <label class="item item-input item-stacked-label widget_button_third_ex" id="alerts-input160">
         <span class="input-label">Begin Date</span>
         <input type="text" placeholder="YYYY-MM-DD HH:MM:SS" ng-model="date.begin">
       </label>
-      <label class="item item-input item-stacked-label widget_button_half" id="alerts-input161">
+      <label class="item item-input item-stacked-label widget_button_third_ex" id="alerts-input161">
         <span class="input-label">End Date</span>
         <input type="text" placeholder="YYYY-MM-DD HH:MM:SS" ng-model="date.end">
       </label>
