--- a/webapp/src/ionicapp/www/templates/troubleshooting.html
+++ b/webapp/src/ionicapp/www/templates/troubleshooting.html
@@ -9,24 +9,24 @@
         <p style="color:#3C5A99;">Filter options</p>
       </div>
       <div class="spacer" style="width: 300px; height: 5px;"></div>
-      <label class="item item-select widget_button_third" id="troubleshooting-select99">
+      <label class="item item-select widget_button_third_ex" id="troubleshooting-select99">
         <span class="input-label">Device</span>
         <select ng-options="devices.indexOf(deviceidx) as deviceidx for deviceidx in devices" ng-model="deviceidx"></select>
       </label>
-      <label class="item item-select widget_button_third" id="troubleshooting-select100">
+      <label class="item item-select widget_button_third_ex" id="troubleshooting-select100">
         <span class="input-label">Direction</span>
         <select ng-options="directions.indexOf(directionidx) as directionidx for directionidx in directions" ng-model="directionidx"></select>
       </label>
-      <label class="item item-select widget_button_third" id="troubleshooting-select101">
+      <label class="item item-select widget_button_third_ex" id="troubleshooting-select101">
         <span class="input-label">Topic</span>
         <select ng-options="topics.indexOf(topicidx) as topicidx for topicidx in topics" ng-model="topicidx"></select>
       </label>
       <div class="spacer" style="width: 300px; height: 5px;"></div>
-      <label class="item item-input item-stacked-label widget_button_half" id="troubleshooting-input156">
+      <label class="item item-input item-stacked-label widget_button_third_ex" id="troubleshooting-input156">
         <span class="input-label">Begin Date</span>
         <input type="text" placeholder="YYYY-MM-DD HH:MM:SS" ng-model="date.begin">
       </label>
-      <label class="item item-input item-stacked-label widget_button_half" id="troubleshooting-input159">
+      <label class="item item-input item-stacked-label widget_button_third_ex" id="troubleshooting-input159">
         <span class="input-label">End Date</span>
         <input type="text" placeholder="YYYY-MM-DD HH:MM:SS" ng-model="date.end">
       </label>
