--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -206,7 +206,7 @@ table, th, td {
 }
 
 .page_width_medium {
-	max-width: 700px;
+	max-width: 800px;
 	margin: 0% auto;
 }
 
@@ -334,9 +334,32 @@ table, th, td {
 	display: inline-block;
 }
 
+.widget_button_third_ex {
+	width: 33% !important;
+	display: inline-block;
+	min-width: 300px;
+}
+
 .widget_button_quarter {
 	width: 24.5% !important;
 	display: inline-block;
+}
+
+.widget_button_quarter_ex {
+	width: 24.5% !important;
+	min-width: 196px;
+	display: inline-block;
+}
+
+.widget_button_fifth_ex {
+	width: 19.6% !important;
+	display: inline-block;
+	min-width: 300px;
+}
+
+.container_center {
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .line_spacing {
