--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -21,7 +21,7 @@
           <i class="icon ion-ios-contact"></i>Profile</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.credits({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-ios-cog"></i>Credits</ion-item>
+          <i class="icon ion-cash"></i>Credits</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item9" ui-sref="menu.organizations({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-ios-color-filter-outline"></i>Organizations</ion-item>
